--- a/OutworldzFiles/Apache/htdocs/PerlExamples/template/regions.tt
+++ b/OutworldzFiles/Apache/htdocs/PerlExamples/template/regions.tt
@@ -15,6 +15,7 @@
         </script>
 </head>
 <body>
+<p>| <a href="/">Home</a>| <a href="/Video">Video</a> | <a href="/Audio">Audio</a> | <a href="/Dreamgrid">Diva</a> | <a href="/Wordpress">Wordpress</a> | <a href="/JOpensim">JOpensim</a> | <a href="/PerlExamples">Perl Examples</a> |</p>    
 <p>[% welcome %]</p>
 <p>Total Regions: [% regioncount %]</p>
 <table class="striped">
