--- a/OutworldzFiles/Apache/htdocs/Stats/listmaps.tt
+++ b/OutworldzFiles/Apache/htdocs/Stats/listmaps.tt
@@ -3,7 +3,6 @@
 
 <title>Simulator stats for Opensim</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
 </head>
 <body>
 
@@ -12,9 +11,10 @@
 
    <h1 class="videotitle">Visitors</h1>
    
+   
    [% FOREACH item IN sims  %]
       <p>
-   	  <a href="[% item.link %]">[% item.regionname %]</a>  Size: [% item.regionsize  %] 
+   	  <a href="[% item.link %]" target="_blank">[% item.regionname %]</a>  Size: [% item.regionsize  %]
       </p>
       
       <img src="[% item.map %]" width="[% item.width %]">	
