Name not showing in ListMaps

--- a/OutworldzFiles/Apache/htdocs/Stats/listmaps.tt
+++ b/OutworldzFiles/Apache/htdocs/Stats/listmaps.tt
@@ -14,7 +14,7 @@
    
    [% FOREACH item IN sims  %]
       <p>
-   	  <a href="[% item.link %]>" [% item.regionname %]</a>  Size: [% item.regionsize  %]
+   	  <a href="[% item.link %]">[% item.regionname %]</a>  Size: [% item.regionsize  %]
       </p>
       
       <a href="[% item.link %]"><img src="[% item.map %]" width="[% item.width %]">	</a>
