--- a/OutworldzFiles/Apache/htdocs/Stats/listmaps.tt
+++ b/OutworldzFiles/Apache/htdocs/Stats/listmaps.tt
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 
-<title>Simulator stats for Opensim</title>
+<title>Simulator stats for $text</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
